# StoRPerCrawler

./: .gitignore  README.md  docker-compose.yaml  platformio.ini  remove_atomic.py  test_cx.sh  test_drive.sh
gazebo/: storper.rviz
lib/OpenTelemetryPico/: OpenTelemetryPico.h
rviz_data/: persistent_settings
sim/: Dockerfile
src/: main.cpp
storper_sim/: CMakeLists.txt  package.xml
storper_sim/config/: storper.rviz
storper_sim/launch/: storper_world.launch.py
storper_sim/urdf/: storper.urdf
storper_sim/worlds/: flat.world
