<?xml version="1.0"?>
<package format="3">
  <name>storper_sim</name>
  <version>0.1.0</version>
  <description>Simulation package for the StoRPer robot</description>

  <maintainer email="matt@doics.co">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
</package>

